--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.3.0",
     "rerun-sdk>=0.23.3",
+    "scipy>=1.15.3",
 ]
 
 [tool.ruff.lint]
